--- a/project/healthkeeper.html
+++ b/project/healthkeeper.html
@@ -55,7 +55,7 @@
 
         <div class="col s12 subject">
 
-          <a href="itms-services://?action=download-manifest&url=https://" target="_blank">Beta 1.2</a>
+          <a href="itms-services://?action=download-manifest&url=https://hongdaesik.github.io/ios/storage/healthkeeper/manifest.plist">Beta 1.2</a>
         </div>
 
         <div class="col s12 description noto-normal">
