#new 1.0.6 상용, 개발 버전 추가

--- a/project/healthkeeper.html
+++ b/project/healthkeeper.html
@@ -5,10 +5,10 @@
 
   <meta name="robots" content="index,follow">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="description" content="Health Keeper iOS">
+  <meta name="description" content="Health Keeper">
   
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Health Keeper iOS">
+  <meta property="og:title" content="Health Keeper">
 
   <!-- icon -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="../css/index.css">
   <link rel="stylesheet" href="../css/font.css">
 
-  <title>Health Keeper iOS</title>
+  <title>Health Keeper</title>
 
 </head>
 
@@ -30,7 +30,7 @@
 
     <div class="brand">
 
-      <div class="logo">Health Keeper iOS</div>
+      <div class="logo">Health Keeper</div>
     </div>
   </header>
 
@@ -41,9 +41,59 @@
     <div class="section">
 
       <!-- title -->
-      <div class="title">Builds</div>
+      <div class="title">iOS</div>
 
       <!-- post -->
+      <div class="row">
+
+        <div class="date">
+
+          <div class="end">2020. 02. 20</div>
+          <div class="line"></div>
+          <div class="end noto-normal">최신</div>
+          <div class="circle"></div>
+        </div>
+
+        <div class="col s12 subject">
+
+          <a href="itms-services://?action=download-manifest&url=https://hongdaesik.github.io/install/storage/healthkeeper/manifest-200220-prod.plist">Prod, 20-02-20</a>
+        </div>
+
+        <div class="col s12 description noto-normal">
+
+          1.2 상용 버전, 납품전 검수용 버전 입니다.
+
+          <br><br>
+
+          <span class="bug">※ 개발 버전과, 상용 버전은 같은 기기에 설치 할 수 없습니다.</span>
+
+          <br>
+
+          <span class="bug">※ 허용된 기기에서만 설치가 가능합니다. 개발자에게 문의해주세요.</span>
+        </div>
+      </div>
+
+      <div class="row">
+
+        <div class="date">
+
+          <div class="end">2020. 02. 20</div>
+          <div class="line"></div>
+          <div class="end noto-normal">최신</div>
+          <div class="circle"></div>
+        </div>
+
+        <div class="col s12 subject">
+
+          <a href="itms-services://?action=download-manifest&url=https://hongdaesik.github.io/install/storage/healthkeeper/manifest-200220-dev.plist">Dev, 20-02-20</a>
+        </div>
+
+        <div class="col s12 description noto-normal">
+
+          1.2 개발 버전, 납품전 검수용 버전 입니다.
+        </div>
+      </div>
+      
       <div class="row">
 
         <div class="date">
@@ -55,12 +105,65 @@
 
         <div class="col s12 subject">
 
-          <a href="itms-services://?action=download-manifest&url=https://hongdaesik.github.io/ios/storage/healthkeeper/manifest.plist">Beta 1.2</a>
+          <a href="https://hongdaesik.github.io/install/storage/healthkeeper/android-prod-200218.apk">Dev, 20-02-18</a>
         </div>
 
         <div class="col s12 description noto-normal">
 
-          서버와 인터페이스 관련 작업이 되지 않은 버전 입니다.
+          베타 버전, 서버와 인터페이스 관련 작업이 되지 않은 버전 입니다.
+        </div>
+      </div>
+    </div>
+
+    <div class="section">
+
+      <!-- title -->
+      <div class="title">Android</div>
+
+      <!-- post -->
+      <div class="row">
+
+        <div class="date">
+
+          <div class="end">2020. 02. 20</div>
+          <div class="line"></div>
+          <div class="end noto-normal">최신</div>
+          <div class="circle"></div>
+        </div>
+
+        <div class="col s12 subject">
+
+          <a href="https://hongdaesik.github.io/install/storage/healthkeeper/android-prod-200220.apk">Prod, 20-02-20</a>
+        </div>
+
+        <div class="col s12 description noto-normal">
+
+          1.0.6 상용 버전, 납품전 검수용 버전 입니다.
+
+          <br><br>
+
+          <span class="bug">※ 개발 버전과, 상용 버전은 같은 기기에 설치 할 수 없습니다.</span>
+        </div>
+      </div>
+
+      <div class="row">
+
+        <div class="date">
+
+          <div class="end">2020. 02. 20</div>
+          <div class="line"></div>
+          <div class="end noto-normal">최신</div>
+          <div class="circle"></div>
+        </div>
+
+        <div class="col s12 subject">
+
+          <a href="https://hongdaesik.github.io/install/storage/healthkeeper/android-dev-200220.apk">Dev, 20-02-20</a>
+        </div>
+
+        <div class="col s12 description noto-normal">
+
+          1.0.6 개발 버전, 납품전 검수용 버전 입니다.
         </div>
       </div>
     </div>
