#modify HK 설명글 수정

--- a/project/healthkeeper.html
+++ b/project/healthkeeper.html
@@ -50,7 +50,6 @@
 
           <div class="end">2020. 02. 20</div>
           <div class="line"></div>
-          <div class="end noto-normal">최신</div>
           <div class="circle"></div>
         </div>
 
@@ -61,7 +60,7 @@
 
         <div class="col s12 description noto-normal">
 
-          1.2 상용 버전, 납품전 검수용 버전 입니다.
+          최신 - 1.2 상용 버전, 납품전 검수용 버전 입니다.
 
           <br><br>
 
@@ -79,7 +78,6 @@
 
           <div class="end">2020. 02. 20</div>
           <div class="line"></div>
-          <div class="end noto-normal">최신</div>
           <div class="circle"></div>
         </div>
 
@@ -90,7 +88,7 @@
 
         <div class="col s12 description noto-normal">
 
-          1.2 개발 버전, 납품전 검수용 버전 입니다.
+          최신 - 1.2 개발 버전, 납품전 검수용 버전 입니다.
         </div>
       </div>
       
@@ -127,7 +125,6 @@
 
           <div class="end">2020. 02. 20</div>
           <div class="line"></div>
-          <div class="end noto-normal">최신</div>
           <div class="circle"></div>
         </div>
 
@@ -138,7 +135,7 @@
 
         <div class="col s12 description noto-normal">
 
-          1.0.6 상용 버전, 납품전 검수용 버전 입니다.
+          최신 - 1.0.6 상용 버전, 납품전 검수용 버전 입니다.
 
           <br><br>
 
@@ -152,7 +149,6 @@
 
           <div class="end">2020. 02. 20</div>
           <div class="line"></div>
-          <div class="end noto-normal">최신</div>
           <div class="circle"></div>
         </div>
 
@@ -163,7 +159,7 @@
 
         <div class="col s12 description noto-normal">
 
-          1.0.6 개발 버전, 납품전 검수용 버전 입니다.
+          최신 - 1.0.6 개발 버전, 납품전 검수용 버전 입니다.
         </div>
       </div>
     </div>
