#modify 다운로드 경고 문구 추가

--- a/project/healthkeeper.html
+++ b/project/healthkeeper.html
@@ -69,6 +69,10 @@
           <br>
 
           <span class="bug">※ 허용된 기기에서만 설치가 가능합니다. 개발자에게 문의해주세요.</span>
+
+          <br>
+
+          <span class="bug">※ 기존 설치된 앱은 삭제 후 다운로드 부탁드립니다.</span>
         </div>
       </div>
 
@@ -140,6 +144,10 @@
           <br><br>
 
           <span class="bug">※ 개발 버전과, 상용 버전은 같은 기기에 설치 할 수 없습니다.</span>
+
+          <br>
+          
+          <span class="bug">※ 기존 설치된 앱은 삭제 후 다운로드 부탁드립니다.</span>
         </div>
       </div>
 
