--- a/project/healthkeeper.html
+++ b/project/healthkeeper.html
@@ -55,12 +55,12 @@
 
         <div class="col s12 subject">
 
-          <a href="itms-services://?action=download-manifest&url=https://hongdaesik.github.io/install/storage/healthkeeper/manifest-prod-200220.plist">Prod, 20-02-20</a>
+          <a href="itms-services://?action=download-manifest&url=https://hongdaesik.github.io/install/storage/healthkeeper/manifest-prod-200225.plist">Prod, 20-02-25</a>
         </div>
 
         <div class="col s12 description noto-normal">
 
-          최신 - 1.2 상용 버전, 납품전 검수용 버전 입니다.
+          최신 - 1.2 상용 버전, 1차 수정.
 
           <br><br>
 
@@ -87,12 +87,52 @@
 
         <div class="col s12 subject">
 
+          <a href="itms-services://?action=download-manifest&url=https://hongdaesik.github.io/install/storage/healthkeeper/manifest-dev-200225.plist">Dev, 20-02-25</a>
+        </div>
+
+        <div class="col s12 description noto-normal">
+
+          최신 - 1.2 개발 버전, 1차 수정.
+        </div>
+      </div>
+
+      <div class="row">
+
+        <div class="date">
+
+          <div class="end">2020. 02. 20</div>
+          <div class="line"></div>
+          <div class="circle"></div>
+        </div>
+
+        <div class="col s12 subject">
+
+          <a href="itms-services://?action=download-manifest&url=https://hongdaesik.github.io/install/storage/healthkeeper/manifest-prod-200220.plist">Prod, 20-02-20</a>
+        </div>
+
+        <div class="col s12 description noto-normal">
+
+          1.2 상용 버전, 납품전 검수용 버전 입니다.
+        </div>
+      </div>
+
+      <div class="row">
+
+        <div class="date">
+
+          <div class="end">2020. 02. 20</div>
+          <div class="line"></div>
+          <div class="circle"></div>
+        </div>
+
+        <div class="col s12 subject">
+
           <a href="itms-services://?action=download-manifest&url=https://hongdaesik.github.io/install/storage/healthkeeper/manifest-dev-200220.plist">Dev, 20-02-20</a>
         </div>
 
         <div class="col s12 description noto-normal">
 
-          최신 - 1.2 개발 버전, 납품전 검수용 버전 입니다.
+          1.2 개발 버전, 납품전 검수용 버전 입니다.
         </div>
       </div>
       
@@ -127,6 +167,54 @@
 
         <div class="date">
 
+          <div class="end">2020. 02. 25</div>
+          <div class="line"></div>
+          <div class="circle"></div>
+        </div>
+
+        <div class="col s12 subject">
+
+          <a href="https://hongdaesik.github.io/install/storage/healthkeeper/android-prod-200225.apk">Prod, 20-02-25</a>
+        </div>
+
+        <div class="col s12 description noto-normal">
+
+          최신 - 1.0.6 상용 버전, 1차 수정.
+
+          <br><br>
+
+          <span class="bug">※ 개발 버전과, 상용 버전은 같은 기기에 설치 할 수 없습니다.</span>
+
+          <br>
+
+          <span class="bug">※ 기존 설치된 앱은 삭제 후 다운로드 부탁드립니다.</span>
+        </div>
+      </div>
+
+      <div class="row">
+
+        <div class="date">
+
+          <div class="end">2020. 02. 25</div>
+          <div class="line"></div>
+          <div class="circle"></div>
+        </div>
+
+        <div class="col s12 subject">
+
+          <a href="https://hongdaesik.github.io/install/storage/healthkeeper/android-dev-200225.apk">Dev, 20-02-25</a>
+        </div>
+
+        <div class="col s12 description noto-normal">
+
+          최신 - 1.0.6 개발 버전, 1차 수정.
+        </div>
+      </div>
+
+      <div class="row">
+
+        <div class="date">
+
           <div class="end">2020. 02. 20</div>
           <div class="line"></div>
           <div class="circle"></div>
@@ -139,15 +227,7 @@
 
         <div class="col s12 description noto-normal">
 
-          최신 - 1.0.6 상용 버전, 납품전 검수용 버전 입니다.
-
-          <br><br>
-
-          <span class="bug">※ 개발 버전과, 상용 버전은 같은 기기에 설치 할 수 없습니다.</span>
-
-          <br>
-
-          <span class="bug">※ 기존 설치된 앱은 삭제 후 다운로드 부탁드립니다.</span>
+          1.0.6 상용 버전, 납품전 검수용 버전 입니다.
         </div>
       </div>
 
@@ -167,7 +247,7 @@
 
         <div class="col s12 description noto-normal">
 
-          최신 - 1.0.6 개발 버전, 납품전 검수용 버전 입니다.
+          1.0.6 개발 버전, 납품전 검수용 버전 입니다.
         </div>
       </div>
     </div>
