#modify 설명글 수정

--- a/project/healthkeeper.html
+++ b/project/healthkeeper.html
@@ -96,9 +96,9 @@
 
           <br><br>
 
-          1-1. 시스템 정보 확인 알림창 취소시 데이터 전달.<br>
+          1-1. 시스템 정보 확인 알림창 취소시 데이터 전달.<br><br>
           2-1. 앱 첫 실행시 푸시 알림창에 이동 버튼이 표현되지 않는 문제 수정.<br>
-          2-2. 앱 설치 가능 기기 추가.
+          2-2. 앱 설치 가능 기기 추가.<br><br>
           3-1. 앱 설치 가능 기기 추가.
         </div>
       </div>
