#modify 4차 수정버전 업로드

--- a/project/healthkeeper.html
+++ b/project/healthkeeper.html
@@ -48,19 +48,19 @@
 
         <div class="date">
 
-          <div class="end">2020. 02. 26</div>
+          <div class="end">2020. 02. 27</div>
           <div class="line"></div>
           <div class="circle"></div>
         </div>
 
         <div class="col s12 subject">
 
-          <a href="itms-services://?action=download-manifest&url=https://hongdaesik.github.io/install/storage/healthkeeper/manifest-prod-200226.plist">Prod, 20-02-26</a>
+          <a href="itms-services://?action=download-manifest&url=https://hongdaesik.github.io/install/storage/healthkeeper/manifest-prod-200227.plist">Prod, 20-02-27</a>
         </div>
 
         <div class="col s12 description noto-normal">
 
-          최신 - 1.2 상용 버전, 3차 수정.
+          최신 - 1.2 상용 버전, 4차 수정.
 
           <br><br>
 
@@ -87,19 +87,20 @@
 
         <div class="col s12 subject">
 
-          <a href="itms-services://?action=download-manifest&url=https://hongdaesik.github.io/install/storage/healthkeeper/manifest-dev-200226.plist">Dev, 20-02-26</a>
+          <a href="itms-services://?action=download-manifest&url=https://hongdaesik.github.io/install/storage/healthkeeper/manifest-dev-200227.plist">Dev, 20-02-27</a>
         </div>
 
         <div class="col s12 description noto-normal">
 
-          최신 - 1.2 개발 버전, 3차 수정.
+          최신 - 1.2 개발 버전, 4차 수정.
 
           <br><br>
 
           1-1. 시스템 정보 확인 알림창 취소시 데이터 전달.<br><br>
           2-1. 앱 첫 실행시 푸시 알림창에 이동 버튼이 표현되지 않는 문제 수정.<br>
           2-2. 앱 설치 가능 기기 추가.<br><br>
-          3-1. 앱 설치 가능 기기 추가.
+          3-1. 앱 설치 가능 기기 추가.<br><br>
+          4-1. 신형 아이폰 하단 메뉴 숨김 처리 수정
         </div>
       </div>
     </div>
