#modify 안드로이드 2차 수정 버전 업로드

--- a/project/healthkeeper.html
+++ b/project/healthkeeper.html
@@ -115,19 +115,19 @@
 
         <div class="date">
 
-          <div class="end">2020. 02. 25</div>
+          <div class="end">2020. 02. 27</div>
           <div class="line"></div>
           <div class="circle"></div>
         </div>
 
         <div class="col s12 subject">
 
-          <a href="https://hongdaesik.github.io/install/storage/healthkeeper/android-prod-200225.apk">Prod, 20-02-25</a>
+          <a href="https://hongdaesik.github.io/install/storage/healthkeeper/android-prod-200227.apk">Prod, 20-02-27</a>
         </div>
 
         <div class="col s12 description noto-normal">
 
-          최신 - 1.0.6 상용 버전, 1차 수정.
+          최신 - 1.0.6 상용 버전, 2차 수정.
 
           <br><br>
 
@@ -143,23 +143,24 @@
 
         <div class="date">
 
-          <div class="end">2020. 02. 25</div>
+          <div class="end">2020. 02. 27</div>
           <div class="line"></div>
           <div class="circle"></div>
         </div>
 
         <div class="col s12 subject">
 
-          <a href="https://hongdaesik.github.io/install/storage/healthkeeper/android-dev-200225.apk">Dev, 20-02-25</a>
+          <a href="https://hongdaesik.github.io/install/storage/healthkeeper/android-dev-200227.apk">Dev, 20-02-27</a>
         </div>
 
         <div class="col s12 description noto-normal">
 
-          최신 - 1.0.6 개발 버전, 1차 수정.
+          최신 - 1.0.6 개발 버전, 2차 수정.
           
           <br><br>
           
-          1-1. 시스템 정보 확인 알림창 취소시 데이터 전달.
+          1-1. 시스템 정보 확인 알림창 취소시 데이터 전달.<br><br>
+          2-1. 절전모드 상태에서 푸시알림 수신 가능하도록 수정.
         </div>
       </div>
     </div>
