--- a/project/healthkeeper.html
+++ b/project/healthkeeper.html
@@ -123,7 +123,7 @@
 
         <div class="col s12 subject">
 
-          <a href="https://hongdaesik.github.io/install/storage/healthkeeper/android-prod-200228.apk">Prod, 20-02-28</a>
+          <a href="https://hongdaesik.github.io/install/storage/healthkeeper/android-prod-200228-1.apk">Prod, 20-02-28</a>
         </div>
 
         <div class="col s12 description noto-normal">
@@ -151,7 +151,7 @@
 
         <div class="col s12 subject">
 
-          <a href="https://hongdaesik.github.io/install/storage/healthkeeper/android-dev-200228.apk">Dev, 20-02-28</a>
+          <a href="https://hongdaesik.github.io/install/storage/healthkeeper/android-dev-200228-1.apk">Dev, 20-02-28</a>
         </div>
 
         <div class="col s12 description noto-normal">
@@ -162,7 +162,7 @@
           
           1-1. 시스템 정보 확인 알림창 취소시 데이터 전달.<br><br>
           2-1. 절전모드 상태에서 푸시알림 수신 가능하도록 수정.<br><br>
-          3-1. 오타 수정.
+          3-1. 시스템 폰트 무시하고 웹페이지 폰트 스타일을 기준으로 수정
         </div>
       </div>
     </div>
