--- a/project/healthkeeper.html
+++ b/project/healthkeeper.html
@@ -116,19 +116,19 @@
 
         <div class="date">
 
-          <div class="end">2020. 02. 28</div>
+          <div class="end">2020. 03. 05</div>
           <div class="line"></div>
           <div class="circle"></div>
         </div>
 
         <div class="col s12 subject">
 
-          <a href="https://hongdaesik.github.io/install/storage/healthkeeper/android-prod-200228-1.apk">Prod, 20-02-28</a>
+          <a href="https://hongdaesik.github.io/install/storage/healthkeeper/android-prod-200305.apk">Prod, 20-03-05</a>
         </div>
 
         <div class="col s12 description noto-normal">
 
-          최신 - 1.0.6 상용 버전, 3차 수정.
+          최신 - 1.0.6 상용 버전, 4차 수정.
 
           <br><br>
 
@@ -144,25 +144,27 @@
 
         <div class="date">
 
-          <div class="end">2020. 02. 28</div>
+          <div class="end">2020. 03. 05</div>
           <div class="line"></div>
           <div class="circle"></div>
         </div>
 
         <div class="col s12 subject">
 
-          <a href="https://hongdaesik.github.io/install/storage/healthkeeper/android-dev-200228-1.apk">Dev, 20-02-28</a>
+          <a href="https://hongdaesik.github.io/install/storage/healthkeeper/android-dev-200305.apk">Dev, 20-03-05</a>
         </div>
 
         <div class="col s12 description noto-normal">
 
-          최신 - 1.0.6 개발 버전, 3차 수정.
+          최신 - 1.0.6 개발 버전, 4차 수정.
           
           <br><br>
           
           1-1. 시스템 정보 확인 알림창 취소시 데이터 전달.<br><br>
           2-1. 절전모드 상태에서 푸시알림 수신 가능하도록 수정.<br><br>
-          3-1. 시스템 폰트 무시하고 웹페이지 폰트 스타일을 기준으로 수정
+          3-1. 시스템 폰트 무시하고 웹페이지 폰트 스타일을 기준으로 수정.<br><br>
+          4-1. 하단 메뉴 공유 버튼 제거.<br>
+          4-2. Input Accent 색상 변경.
         </div>
       </div>
     </div>
