--- a/project/healthkeeper.html
+++ b/project/healthkeeper.html
@@ -48,19 +48,19 @@
 
         <div class="date">
 
-          <div class="end">2020. 02. 28</div>
+          <div class="end">2020. 03. 06</div>
           <div class="line"></div>
           <div class="circle"></div>
         </div>
 
         <div class="col s12 subject">
 
-          <a href="itms-services://?action=download-manifest&url=https://hongdaesik.github.io/install/storage/healthkeeper/manifest-prod-200228.plist">Prod, 20-02-28</a>
+          <a href="itms-services://?action=download-manifest&url=https://hongdaesik.github.io/install/storage/healthkeeper/manifest-prod-200306.plist">Prod, 20-03-06</a>
         </div>
 
         <div class="col s12 description noto-normal">
 
-          최신 - 1.2 상용 버전, 5차 수정.
+          최신 - 1.2 상용 버전, 6차 수정.
 
           <br><br>
 
@@ -80,19 +80,19 @@
 
         <div class="date">
 
-          <div class="end">2020. 02. 28</div>
+          <div class="end">2020. 03. 06</div>
           <div class="line"></div>
           <div class="circle"></div>
         </div>
 
         <div class="col s12 subject">
 
-          <a href="itms-services://?action=download-manifest&url=https://hongdaesik.github.io/install/storage/healthkeeper/manifest-dev-200228.plist">Dev, 20-02-28</a>
+          <a href="itms-services://?action=download-manifest&url=https://hongdaesik.github.io/install/storage/healthkeeper/manifest-dev-200306.plist">Dev, 20-03-06</a>
         </div>
 
         <div class="col s12 description noto-normal">
 
-          최신 - 1.2 개발 버전, 5차 수정.
+          최신 - 1.2 개발 버전, 6차 수정.
 
           <br><br>
 
@@ -101,7 +101,8 @@
           2-2. 앱 설치 가능 기기 추가.<br><br>
           3-1. 앱 설치 가능 기기 추가.<br><br>
           4-1. 신형 아이폰 하단 메뉴 숨김 처리 수정<br><br>
-          5-1. 첨부 카메라, 동영상 선택시 앱 종료 현상 수정.
+          5-1. 첨부 카메라, 동영상 선택시 앱 종료 현상 수정.<br><br>
+          6-1. 공유, 북마크 링크 관련 수정.
         </div>
       </div>
     </div>
@@ -123,7 +124,7 @@
 
         <div class="col s12 subject">
 
-          <a href="https://hongdaesik.github.io/install/storage/healthkeeper/android-prod-200306.apk">Prod, 20-03-06</a>
+          <a href="https://hongdaesik.github.io/install/storage/healthkeeper/android-prod-200306-1.apk">Prod, 20-03-06</a>
         </div>
 
         <div class="col s12 description noto-normal">
@@ -151,7 +152,7 @@
 
         <div class="col s12 subject">
 
-          <a href="https://hongdaesik.github.io/install/storage/healthkeeper/android-dev-200306.apk">Dev, 20-03-06</a>
+          <a href="https://hongdaesik.github.io/install/storage/healthkeeper/android-dev-200306-1.apk">Dev, 20-03-06</a>
         </div>
 
         <div class="col s12 description noto-normal">
@@ -165,7 +166,8 @@
           3-1. 시스템 폰트 무시하고 웹페이지 폰트 스타일을 기준으로 수정.<br><br>
           4-1. 하단 메뉴 공유 버튼 제거.<br>
           4-2. Input Accent 색상 변경.<br><br>
-          5-1. 외부 어플리케이션 실행 관련 수정.
+          5-1. 외부 어플리케이션 실행 관련 수정.<br>
+          5-2. 공유, 북마크 링크 관련 수정.
         </div>
       </div>
     </div>
