#modify 아이폰 데이터 삭제

--- a/project/healthkeeper.html
+++ b/project/healthkeeper.html
@@ -102,7 +102,8 @@
           3-1. 앱 설치 가능 기기 추가.<br><br>
           4-1. 신형 아이폰 하단 메뉴 숨김 처리 수정<br><br>
           5-1. 첨부 카메라, 동영상 선택시 앱 종료 현상 수정.<br><br>
-          6-1. 공유, 북마크 링크 관련 수정.
+          6-1. 공유, 북마크 링크 관련 수정.<br>
+          6-2. UIWebView 지원 중지로 인한 코드 교체
         </div>
       </div>
     </div>
