#modify 안드로이드 수정본 업로드

--- a/project/healthkeeper.html
+++ b/project/healthkeeper.html
@@ -87,7 +87,7 @@
 
         <div class="col s12 subject">
 
-          <a href="itms-services://?action=download-manifest&url=https://hongdaesik.github.io/install/storage/healthkeeper/manifest-dev-200306.plist">Dev, 20-03-06</a>
+          <a href="itms-services://?action=download-manifest&url=https://hongdaesik.github.io/install/storage/healthkeeper/manifest-dev-200306-1.plist">Dev, 20-03-06</a>
         </div>
 
         <div class="col s12 description noto-normal">
@@ -118,19 +118,19 @@
 
         <div class="date">
 
-          <div class="end">2020. 03. 06</div>
+          <div class="end">2020. 03. 09</div>
           <div class="line"></div>
           <div class="circle"></div>
         </div>
 
         <div class="col s12 subject">
 
-          <a href="https://hongdaesik.github.io/install/storage/healthkeeper/android-prod-200306-1.apk">Prod, 20-03-06</a>
+          <a href="https://hongdaesik.github.io/install/storage/healthkeeper/android-prod-200309.apk">Prod, 20-03-09</a>
         </div>
 
         <div class="col s12 description noto-normal">
 
-          최신 - 1.0.6 상용 버전, 5차 수정.
+          최신 - 1.0.6 상용 버전, 6차 수정.
 
           <br><br>
 
@@ -146,19 +146,19 @@
 
         <div class="date">
 
-          <div class="end">2020. 03. 06</div>
+          <div class="end">2020. 03. 09</div>
           <div class="line"></div>
           <div class="circle"></div>
         </div>
 
         <div class="col s12 subject">
 
-          <a href="https://hongdaesik.github.io/install/storage/healthkeeper/android-dev-200306-1.apk">Dev, 20-03-06</a>
+          <a href="https://hongdaesik.github.io/install/storage/healthkeeper/android-dev-200309.apk">Dev, 20-03-09</a>
         </div>
 
         <div class="col s12 description noto-normal">
 
-          최신 - 1.0.6 개발 버전, 5차 수정.
+          최신 - 1.0.6 개발 버전, 6차 수정.
           
           <br><br>
           
@@ -168,7 +168,9 @@
           4-1. 하단 메뉴 공유 버튼 제거.<br>
           4-2. Input Accent 색상 변경.<br><br>
           5-1. 외부 어플리케이션 실행 관련 수정.<br>
-          5-2. 공유, 북마크 링크 관련 수정.
+          5-2. 공유, 북마크 링크 관련 수정.<br><br>
+          6-1. 다운로드시 앱 종료현상 수정.<br>
+          6-2. 오즈뷰어 호출시 빈페이지 관련 수정.
         </div>
       </div>
     </div>
