#modify 아이폰 7차 수정본 업로드

--- a/project/healthkeeper.html
+++ b/project/healthkeeper.html
@@ -48,19 +48,19 @@
 
         <div class="date">
 
-          <div class="end">2020. 03. 06</div>
+          <div class="end">2020. 03. 09</div>
           <div class="line"></div>
           <div class="circle"></div>
         </div>
 
         <div class="col s12 subject">
 
-          <a href="itms-services://?action=download-manifest&url=https://hongdaesik.github.io/install/storage/healthkeeper/manifest-prod-200306.plist">Prod, 20-03-06</a>
+          <a href="itms-services://?action=download-manifest&url=https://hongdaesik.github.io/install/storage/healthkeeper/manifest-prod-200309.plist">Prod, 20-03-09</a>
         </div>
 
         <div class="col s12 description noto-normal">
 
-          최신 - 1.2 상용 버전, 6차 수정.
+          최신 - 1.2 상용 버전, 7차 수정.
 
           <br><br>
 
@@ -80,19 +80,19 @@
 
         <div class="date">
 
-          <div class="end">2020. 03. 06</div>
+          <div class="end">2020. 03. 09</div>
           <div class="line"></div>
           <div class="circle"></div>
         </div>
 
         <div class="col s12 subject">
 
-          <a href="itms-services://?action=download-manifest&url=https://hongdaesik.github.io/install/storage/healthkeeper/manifest-dev-200306-1.plist">Dev, 20-03-06</a>
+          <a href="itms-services://?action=download-manifest&url=https://hongdaesik.github.io/install/storage/healthkeeper/manifest-dev-200309.plist">Dev, 20-03-09</a>
         </div>
 
         <div class="col s12 description noto-normal">
 
-          최신 - 1.2 개발 버전, 6차 수정.
+          최신 - 1.2 개발 버전, 7차 수정.
 
           <br><br>
 
@@ -103,7 +103,9 @@
           4-1. 신형 아이폰 하단 메뉴 숨김 처리 수정<br><br>
           5-1. 첨부 카메라, 동영상 선택시 앱 종료 현상 수정.<br><br>
           6-1. 공유, 북마크 링크 관련 수정.<br>
-          6-2. UIWebView 지원 중지로 인한 코드 교체
+          6-2. UIWebView 지원 중지로 인한 코드 교체.<br><br>
+          7-1. 리포트 HTTP 주소 허용 추가.<br>
+          7-2. 개발 버전 잘못된 메인 주소 수정.
         </div>
       </div>
     </div>
@@ -170,7 +172,8 @@
           5-1. 외부 어플리케이션 실행 관련 수정.<br>
           5-2. 공유, 북마크 링크 관련 수정.<br><br>
           6-1. 다운로드시 앱 종료현상 수정.<br>
-          6-2. 오즈뷰어 호출시 빈페이지 관련 수정.
+          6-2. 리포트 HTTP 주소 허용 추가.<br>
+          6-3. 오즈뷰어 호출시 빈페이지 관련 수정.
         </div>
       </div>
     </div>
