--- a/project/chauffeur.html
+++ b/project/chauffeur.html
@@ -62,6 +62,8 @@
           최신 - 1.0.0 상용 버전
 
           <br><br>
+          
+          1. 최종 디자인 및 수정사항 적용 버전.
 
           <span class="bug">※ 개발 버전과, 상용 버전은 같은 기기에 설치 할 수 없습니다.</span>
 
