--- a/project/chauffeur.html
+++ b/project/chauffeur.html
@@ -40,9 +40,80 @@
     <div class="section">
 
       <!-- title -->
+      <div class="title">CMS</div>
+
+      <!-- post -->
+      <div class="row">
+
+        <div class="date">
+
+          <div class="end">2020. 09. 25</div>
+          <div class="line"></div>
+          <div class="circle"></div>
+        </div>
+
+        <div class="col s12 subject">
+
+          <a href="https://cms.15883535.com" target="_blank">2.0.0</a>
+        </div>
+
+        <div class="col s12 description noto-normal">
+
+          - 아이디: 기존 아이디 사용<br>
+          - 비밀번호: 흔들어대리
+
+          <br><br>
+
+          <span class="bug">※ 신규 상담원의 경우 정보가 없을 수 있습니다( 설정 > 직원 메뉴에서 등록 ).</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="section">
+
+      <!-- title -->
       <div class="title">Android</div>
 
       <!-- post -->
+      <div class="row">
+
+        <div class="date">
+
+          <div class="end">2020. 09. 25</div>
+          <div class="line"></div>
+          <div class="circle"></div>
+        </div>
+
+        <div class="col s12 subject">
+
+          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-200929.apk">1.0.1</a>
+        </div>
+
+        <div class="col s12 description noto-normal">
+
+          최신 버전
+
+          <br><br>
+
+          1. 접수화면 지도 스크롤뷰에 포함.<br>
+          2. 네트워크 상태가 안좋을때 예외처리 작업.<br>
+          3. 출발지 지도 확대 축소시 핀을 중심으로 동작.<br>
+          4. 안드로이드는 돋보기 표시에 색상 변경 및 단어 입력 불가.<br>
+          &nbsp;&nbsp;- 검색의 경우 돋보기, 입력의 경우 완료 버튼으로 작업.<br>
+          &nbsp;&nbsp;- 아이폰의 경우 단어 입력이 가능하여 검색, 완료 버튼으로 작업.<br>
+          5. 아이콘 15%적립 텍스트 사이즈 변경.<br>
+          6. 메인 화면 적립 텍스트 사이즈 변경.<br>
+
+          <br>
+
+          <span class="bug">※ 개발 버전과, 상용 버전은 같은 기기에 설치 할 수 없습니다.</span>
+
+          <br>
+
+          <span class="bug">※ 기존 설치된 앱은 삭제 후 다운로드 부탁드립니다.</span>
+        </div>
+      </div>
+
       <div class="row">
 
         <div class="date">
@@ -54,24 +125,16 @@
 
         <div class="col s12 subject">
 
-          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-200921.apk">Prod, 20-09-21</a>
+          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-200921.apk">1.0.0</a>
         </div>
 
         <div class="col s12 description noto-normal">
 
-          1.0.0 상용 버전 ( 최신 )
+          1.0.0
 
           <br><br>
           
           1. 최종 디자인 및 수정사항 적용 버전.
-
-          <br><br>
-
-          <span class="bug">※ 개발 버전과, 상용 버전은 같은 기기에 설치 할 수 없습니다.</span>
-
-          <br>
-
-          <span class="bug">※ 기존 설치된 앱은 삭제 후 다운로드 부탁드립니다.</span>
         </div>
       </div>
     </div>
