--- a/project/chauffeur.html
+++ b/project/chauffeur.html
@@ -79,6 +79,38 @@
 
         <div class="date">
 
+          <div class="end">2020. 11. 05</div>
+          <div class="line"></div>
+          <div class="circle"></div>
+        </div>
+
+        <div class="col s12 subject">
+
+          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-201105.apk">2.0.0</a>
+        </div>
+
+        <div class="col s12 description noto-normal">
+
+          최신 버전
+
+          <br><br>
+          
+          1. 신규 기획 개발 버전.
+
+          <br>
+
+          <span class="bug">※ 개발 버전과, 상용 버전은 같은 기기에 설치 할 수 없습니다.</span>
+
+          <br>
+
+          <span class="bug">※ 기존 설치된 앱은 삭제 후 다운로드 부탁드립니다.</span>
+        </div>
+      </div>
+      
+      <div class="row">
+
+        <div class="date">
+
           <div class="end">2020. 09. 25</div>
           <div class="line"></div>
           <div class="circle"></div>
@@ -91,7 +123,7 @@
 
         <div class="col s12 description noto-normal">
 
-          최신 버전
+          1.0.1
 
           <br><br>
 
