#new 안드로이드 2.0.1 버전 추가

--- a/project/chauffeur.html
+++ b/project/chauffeur.html
@@ -86,24 +86,46 @@
 
         <div class="col s12 subject">
 
-          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-201106.apk">2.0.0</a>
+          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-201110.apk">2.0.1</a>
         </div>
 
         <div class="col s12 description noto-normal">
 
-          최신 버전
+          1. 맵 줌 레벨 확대.<br>
+          2. 현금, 카드 15%, 퍼센트지를 작게 괄호로 묶고. 폰트 가늘게.<br>
+          3. 배차가 되었을때 접수 내역으로 이동.<br>
+          4. 단일결제 이미 입력된 상태면은 요금 입력창 초기화 하지 않기.<br>
+          5. GPS 알림 오차범위 200M 로 수정.<br>
+          6. 상담원 접수 / 흔들어서 접수 완료시 확인 앱 종료.<br>
+          7. 단일결제시에 결제요금만 표현.
 
           <br><br>
-          
-          1. 신규 기획 개발 버전.<br>
-
-          <br>
 
           <span class="bug">※ 개발 버전과, 상용 버전은 같은 기기에 설치 할 수 없습니다.</span>
 
           <br>
 
           <span class="bug">※ 기존 설치된 앱은 삭제 후 다운로드 부탁드립니다.</span>
+        </div>
+      </div>
+
+      <div class="row">
+
+        <div class="date">
+
+          <div class="end">2020. 11. 06</div>
+          <div class="line"></div>
+          <div class="circle"></div>
+        </div>
+
+        <div class="col s12 subject">
+
+          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-201106.apk">2.0.0</a>
+        </div>
+
+        <div class="col s12 description noto-normal">
+
+          1. 신규 기획 개발 버전.<br>
         </div>
       </div>
       
@@ -135,14 +157,6 @@
           &nbsp;&nbsp;- 아이폰의 경우 단어 입력이 가능하여 검색, 완료 버튼으로 작업.<br>
           5. 아이콘 15%적립 텍스트 사이즈 변경.<br>
           6. 메인 화면 적립 텍스트 사이즈 변경.<br>
-
-          <br>
-
-          <span class="bug">※ 개발 버전과, 상용 버전은 같은 기기에 설치 할 수 없습니다.</span>
-
-          <br>
-
-          <span class="bug">※ 기존 설치된 앱은 삭제 후 다운로드 부탁드립니다.</span>
         </div>
       </div>
 
