--- a/project/chauffeur.html
+++ b/project/chauffeur.html
@@ -79,7 +79,56 @@
 
         <div class="date">
 
-          <div class="end">2020. 11. 06</div>
+          <div class="end">2020. 11. 20</div>
+          <div class="line"></div>
+          <div class="circle"></div>
+        </div>
+
+        <div class="col s12 subject">
+
+          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-201120.apk">2.0.3</a>
+        </div>
+
+        <div class="col s12 description noto-normal">
+
+          1. 배차시에도 취소 요청 가능.<br>
+
+          <br>
+
+          <span class="bug">※ 개발 버전과, 상용 버전은 같은 기기에 설치 할 수 없습니다.</span>
+
+          <br>
+
+          <span class="bug">※ 기존 설치된 앱은 삭제 후 다운로드 부탁드립니다.</span>
+        </div>
+      </div>
+
+      <div class="row">
+
+        <div class="date">
+
+          <div class="end">2020. 11. 12</div>
+          <div class="line"></div>
+          <div class="circle"></div>
+        </div>
+
+        <div class="col s12 subject">
+
+          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-201112.apk">2.0.2</a>
+        </div>
+
+        <div class="col s12 description noto-normal">
+
+          1. 앱 실행시 메인화면이면 접수내역으로 이동.<br>
+          2. 접수화면 카드 추가시 등록후 접수화면으로 이동.<br>
+        </div>
+      </div>
+
+      <div class="row">
+
+        <div class="date">
+
+          <div class="end">2020. 11. 10</div>
           <div class="line"></div>
           <div class="circle"></div>
         </div>
@@ -97,15 +146,7 @@
           4. 단일결제 이미 입력된 상태면은 요금 입력창 초기화 하지 않기.<br>
           5. GPS 알림 오차범위 200M 로 수정.<br>
           6. 상담원 접수 / 흔들어서 접수 완료시 확인 앱 종료.<br>
-          7. 단일결제시에 결제요금만 표현.
-
-          <br><br>
-
-          <span class="bug">※ 개발 버전과, 상용 버전은 같은 기기에 설치 할 수 없습니다.</span>
-
-          <br>
-
-          <span class="bug">※ 기존 설치된 앱은 삭제 후 다운로드 부탁드립니다.</span>
+          7. 단일결제시에 결제요금만 표현.<br>
         </div>
       </div>
 
@@ -145,10 +186,6 @@
 
         <div class="col s12 description noto-normal">
 
-          1.0.1
-
-          <br><br>
-
           1. 접수화면 지도 스크롤뷰에 포함.<br>
           2. 네트워크 상태가 안좋을때 예외처리 작업.<br>
           3. 출발지 지도 확대 축소시 핀을 중심으로 동작.<br>
@@ -175,10 +212,6 @@
         </div>
 
         <div class="col s12 description noto-normal">
-
-          1.0.0
-
-          <br><br>
           
           1. 최종 디자인 및 수정사항 적용 버전.
         </div>
