--- a/project/chauffeur.html
+++ b/project/chauffeur.html
@@ -79,6 +79,39 @@
 
         <div class="date">
 
+          <div class="end">2020. 11. 28</div>
+          <div class="line"></div>
+          <div class="circle"></div>
+        </div>
+
+        <div class="col s12 subject">
+
+          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-201128.apk">2.0.4</a>
+        </div>
+
+        <div class="col s12 description noto-normal">
+
+          1. 흔들때 바로 접수 처리.<br>
+          2. 흔드는 이벤트 조금 더 민감하게.<br>
+          3. 취소 확인시 이용내역으로 이동 안되게.<br>
+          4. 탁송 문구 변경.<br>
+          5. 이용내역 전체삭제 추가.<br>
+          6. 재접수 후 접수 누를시 금액 반영이 안되는 문제 해결.<br>
+
+          <br>
+
+          <span class="bug">※ 개발 버전과, 상용 버전은 같은 기기에 설치 할 수 없습니다.</span>
+
+          <br>
+
+          <span class="bug">※ 기존 설치된 앱은 삭제 후 다운로드 부탁드립니다.</span>
+        </div>
+      </div>
+
+      <div class="row">
+
+        <div class="date">
+
           <div class="end">2020. 11. 27</div>
           <div class="line"></div>
           <div class="circle"></div>
@@ -92,14 +125,6 @@
         <div class="col s12 description noto-normal">
 
           1. 내역관련 검색어가 있으면 미리 표현.<br>
-
-          <br>
-
-          <span class="bug">※ 개발 버전과, 상용 버전은 같은 기기에 설치 할 수 없습니다.</span>
-
-          <br>
-
-          <span class="bug">※ 기존 설치된 앱은 삭제 후 다운로드 부탁드립니다.</span>
         </div>
       </div>
 
