--- a/project/chauffeur.html
+++ b/project/chauffeur.html
@@ -79,6 +79,35 @@
 
         <div class="date">
 
+          <div class="end">2020. 12. 11</div>
+          <div class="line"></div>
+          <div class="circle"></div>
+        </div>
+
+        <div class="col s12 subject">
+
+          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-201211.apk">2.0.6</a>
+        </div>
+
+        <div class="col s12 description noto-normal">
+
+          1. 마일리지 표현.<br>
+          2. 흔들기 센서 방식 변경.<br>
+
+          <br>
+
+          <span class="bug">※ 개발 버전과, 상용 버전은 같은 기기에 설치 할 수 없습니다.</span>
+
+          <br>
+
+          <span class="bug">※ 기존 설치된 앱은 삭제 후 다운로드 부탁드립니다.</span>
+        </div>
+      </div>
+
+      <div class="row">
+
+        <div class="date">
+
           <div class="end">2020. 12. 02</div>
           <div class="line"></div>
           <div class="circle"></div>
@@ -92,14 +121,6 @@
         <div class="col s12 description noto-normal">
 
           1. 스토어 버전.<br>
-
-          <br>
-
-          <span class="bug">※ 개발 버전과, 상용 버전은 같은 기기에 설치 할 수 없습니다.</span>
-
-          <br>
-
-          <span class="bug">※ 기존 설치된 앱은 삭제 후 다운로드 부탁드립니다.</span>
         </div>
       </div>
 
