--- a/project/chauffeur.html
+++ b/project/chauffeur.html
@@ -79,6 +79,35 @@
 
         <div class="date">
 
+          <div class="end">2020. 01. 06</div>
+          <div class="line"></div>
+          <div class="circle"></div>
+        </div>
+
+        <div class="col s12 subject">2.0.7</div>
+
+        <div class="col s12 description noto-normal">
+
+          1. 흔들기 동작 민감도별 파일, 낮을수록 민감함.<br><br>
+          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-200104-800.apk">800</a><br>
+          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-200104-900.apk">900</a><br>
+          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-200104-1000.apk">1000</a><br>
+          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-200104-1200.apk">1200 ( 기존 )</a><br>
+
+          <br>
+
+          <span class="bug">※ 개발 버전과, 상용 버전은 같은 기기에 설치 할 수 없습니다.</span>
+
+          <br>
+
+          <span class="bug">※ 기존 설치된 앱은 삭제 후 다운로드 부탁드립니다.</span>
+        </div>
+      </div>
+
+      <div class="row">
+
+        <div class="date">
+
           <div class="end">2020. 12. 11</div>
           <div class="line"></div>
           <div class="circle"></div>
@@ -93,14 +122,6 @@
 
           1. 마일리지 표현.<br>
           2. 흔들기 센서 방식 변경.<br>
-
-          <br>
-
-          <span class="bug">※ 개발 버전과, 상용 버전은 같은 기기에 설치 할 수 없습니다.</span>
-
-          <br>
-
-          <span class="bug">※ 기존 설치된 앱은 삭제 후 다운로드 부탁드립니다.</span>
         </div>
       </div>
 
