--- a/project/chauffeur.html
+++ b/project/chauffeur.html
@@ -79,22 +79,19 @@
 
         <div class="date">
 
-          <div class="end">2020. 01. 06</div>
+          <div class="end">2020. 01. 11</div>
           <div class="line"></div>
           <div class="circle"></div>
         </div>
 
-        <div class="col s12 subject">2.0.7</div>
+        <div class="col s12 subject">
+
+          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-210111.apk">2.0.7</a></div>
 
         <div class="col s12 description noto-normal">
 
-          1. 흔들기 동작 민감도별 파일, 낮을수록 민감함.<br><br>
-          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-200104-800.apk">800</a><br>
-          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-200104-900.apk">900</a><br>
-          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-200104-1000.apk">1000</a><br>
-          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-200104-1200.apk">1200 ( 기존 )</a><br>
-
-          <br>
+          1. 취소 알림 재접수 버튼 추가.<br>
+          2. 흔들기 모션 중력 가속도 적용.<br>
 
           <span class="bug">※ 개발 버전과, 상용 버전은 같은 기기에 설치 할 수 없습니다.</span>
 
