--- a/project/chauffeur.html
+++ b/project/chauffeur.html
@@ -79,6 +79,31 @@
 
         <div class="date">
 
+          <div class="end">2020. 01. 19</div>
+          <div class="line"></div>
+          <div class="circle"></div>
+        </div>
+
+        <div class="col s12 subject">
+
+          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-210119.apk">2.0.8</a></div>
+
+        <div class="col s12 description noto-normal">
+
+          1. 흔들기 접수시 이중으로 접수되는 문제 해결.<br><br>
+
+          <span class="bug">※ 개발 버전과, 상용 버전은 같은 기기에 설치 할 수 없습니다.</span>
+
+          <br>
+
+          <span class="bug">※ 기존 설치된 앱은 삭제 후 다운로드 부탁드립니다.</span>
+        </div>
+      </div>
+
+      <div class="row">
+
+        <div class="date">
+
           <div class="end">2020. 01. 11</div>
           <div class="line"></div>
           <div class="circle"></div>
@@ -92,12 +117,6 @@
 
           1. 취소 알림 재접수 버튼 추가.<br>
           2. 흔들기 모션 중력 가속도 적용.<br>
-
-          <span class="bug">※ 개발 버전과, 상용 버전은 같은 기기에 설치 할 수 없습니다.</span>
-
-          <br>
-
-          <span class="bug">※ 기존 설치된 앱은 삭제 후 다운로드 부탁드립니다.</span>
         </div>
       </div>
 
