--- a/project/chauffeur.html
+++ b/project/chauffeur.html
@@ -79,6 +79,32 @@
 
         <div class="date">
 
+          <div class="end">2020. 01. 28</div>
+          <div class="line"></div>
+          <div class="circle"></div>
+        </div>
+
+        <div class="col s12 subject">
+
+          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-210128.apk">2.0.9</a></div>
+
+        <div class="col s12 description noto-normal">
+
+          1. 흔들기 모션 최적화.<br>
+          2. 마일리지 색상 빨간색으로 변경<br><br>
+
+          <span class="bug">※ 개발 버전과, 상용 버전은 같은 기기에 설치 할 수 없습니다.</span>
+
+          <br>
+
+          <span class="bug">※ 기존 설치된 앱은 삭제 후 다운로드 부탁드립니다.</span>
+        </div>
+      </div>
+
+      <div class="row">
+
+        <div class="date">
+
           <div class="end">2020. 01. 19</div>
           <div class="line"></div>
           <div class="circle"></div>
@@ -90,13 +116,7 @@
 
         <div class="col s12 description noto-normal">
 
-          1. 흔들기 접수시 이중으로 접수되는 문제 해결.<br><br>
-
-          <span class="bug">※ 개발 버전과, 상용 버전은 같은 기기에 설치 할 수 없습니다.</span>
-
-          <br>
-
-          <span class="bug">※ 기존 설치된 앱은 삭제 후 다운로드 부탁드립니다.</span>
+          1. 흔들기 접수시 이중으로 접수되는 문제 해결.<br>
         </div>
       </div>
 
