#update 흔들어대리 검색 기능 추가 및 APK 파일 정리

--- a/project/chauffeur.html
+++ b/project/chauffeur.html
@@ -79,19 +79,19 @@
 
         <div class="date">
 
-          <div class="end">2020. 01. 28</div>
+          <div class="end">2021. 07. 21</div>
           <div class="line"></div>
           <div class="circle"></div>
         </div>
 
         <div class="col s12 subject">
 
-          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-210128.apk">2.0.9</a></div>
+          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-210720.apk">2.1.0</a></div>
 
         <div class="col s12 description noto-normal">
 
-          1. 흔들기 모션 최적화.<br>
-          2. 마일리지 색상 빨간색으로 변경<br><br>
+          1. 접수 / 이용내역 디자인 변경.<br>
+          2. 출발, 도착, 경유지 검색 기능 추가.<br><br>
 
           <span class="bug">※ 개발 버전과, 상용 버전은 같은 기기에 설치 할 수 없습니다.</span>
 
@@ -105,7 +105,27 @@
 
         <div class="date">
 
-          <div class="end">2020. 01. 19</div>
+          <div class="end">2020. 01. 28</div>
+          <div class="line"></div>
+          <div class="circle"></div>
+        </div>
+
+        <div class="col s12 subject">
+
+          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-210128.apk">2.0.9</a></div>
+
+        <div class="col s12 description noto-normal">
+
+          1. 흔들기 모션 최적화.<br>
+          2. 마일리지 색상 빨간색으로 변경<br>
+        </div>
+      </div>
+
+      <div class="row">
+
+        <div class="date">
+
+          <div class="end">2021. 01. 19</div>
           <div class="line"></div>
           <div class="circle"></div>
         </div>
@@ -124,7 +144,7 @@
 
         <div class="date">
 
-          <div class="end">2020. 01. 11</div>
+          <div class="end">2021. 01. 11</div>
           <div class="line"></div>
           <div class="circle"></div>
         </div>
