--- a/project/chauffeur.html
+++ b/project/chauffeur.html
@@ -86,18 +86,37 @@
 
         <div class="col s12 subject">
 
-          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-210720.apk">2.1.0</a></div>
+          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-210720.1.apk">2.1.1</a></div>
 
         <div class="col s12 description noto-normal">
 
-          1. 접수 / 이용내역 디자인 변경.<br>
-          2. 출발, 도착, 경유지 검색 기능 추가.<br><br>
+          1. 접수 내역 버그 수정.<br><br>
 
           <span class="bug">※ 개발 버전과, 상용 버전은 같은 기기에 설치 할 수 없습니다.</span>
 
           <br>
 
           <span class="bug">※ 기존 설치된 앱은 삭제 후 다운로드 부탁드립니다.</span>
+        </div>
+      </div>
+
+      <div class="row">
+
+        <div class="date">
+
+          <div class="end">2021. 07. 21</div>
+          <div class="line"></div>
+          <div class="circle"></div>
+        </div>
+
+        <div class="col s12 subject">
+
+          <a href="https://hongdaesik.github.io/install/storage/chauffeur/android-prod-210720.apk">2.1.0</a></div>
+
+        <div class="col s12 description noto-normal">
+
+          1. 접수 / 이용내역 디자인 변경.<br>
+          2. 출발, 도착, 경유지 검색 기능 추가.<br>
         </div>
       </div>
 
